# FFT-Implementations

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
c/: benchmark.c  main.c  side_quests.c  side_quests.h
c++/: .clang-format  benchmark.cpp  dft_CT.cpp  dft_radix2.cpp  main.cpp  utils.cpp
c++/dft/: dft_CT.h  dft_CT.h.gch  dft_radix2.cpp  dft_radix2.h  dft_radix2.h.gch  dft_usual.cpp  dft_usual.h  dft_usual.h.gch  structs.h  structs.h.gch  utils.cpp  utils.h
c/dft/: dft_CT.c  dft_CT.h  dft_radix2.c  dft_radix2.h  dft_usual.c  dft_usual.h  structs.h  utils.c  utils.h
codes/: .clang-format  dft_CT.cpp  dft_radix2.cpp  dft_usual.cpp  main.cpp  side_quests.cpp  side_quests.h  utils.cpp
systemverilog/: .gitignore  FFT.xpr  butterfly_structural.sv  eval.tcl  fft_radix2.sv  fixed_arith.sv  structs.sv  tb_fft.sv  twiddle_factor.py  twiddle_factor.sv
systemverilog/DIF_R2MDC/: Butterfly.sv  Commutator.sv  Complex_Mul.sv  Controller.sv  DIF_R2MDC.xpr  Delay_pipe.sv  R2MDC.sv  R2MDC_stage.sv  R2MDC_tb.sv  R2MDC_tb_behav.wcfg  Twiddle_ROM.sv  clockInfo.txt  constraints.xdc  do.tcl  twiddle_factor.py
systemverilog/DIF_R2SDC/: Butterfly.sv  Commutator.sv  Complex_Mul.sv  DIF_R2SDC.xpr  R2SDC.sv  R2SDC_Stage.sv  R2SDC_tb.sv  R2SDC_tb_behav.wcfg  SDC_Control.sv  Shift_Register.sv  Twiddle_ROM.sv  clockInfo.txt  constraints.xdc  do.tcl
systemverilog/DIT_radix2_inplace/: DIT_radix2_inplace.sv  DIT_radix2_inplace.xpr  FFT.xpr  clockInfo.txt  do.tcl  fft_radix2.sv  fft_radix2_tb_behav.wcfg  fft_radix2_tb_behav1.wcfg  fft_radix2_tb_behav2.wcfg  fixed_mul.sv  (+2 more)
(+81 files in other folders)
